GH Actions: add workflow to automatically deploy the wiki

--- a/.github/workflows/publish-wiki.yml
+++ b/.github/workflows/publish-wiki.yml
@@ -104,6 +104,8 @@ jobs:
       - name: Re-run tables of contents with different settings for specific file
         run: doctoc ./_wiki/Version-4.0-User-Upgrade-Guide.md --github --maxlevel 3 --update-only
 
+      # TODO:
+      # Update output examples
 
       # ############################
       # Deploy.
