--- a/.github/workflows/publish-wiki.yml
+++ b/.github/workflows/publish-wiki.yml
@@ -53,10 +53,12 @@ jobs:
 
       - name: Deploy to wiki
         uses: Andrew-Chen-Wang/github-wiki-action@v4
+        env:
+          COMMIT_MSG: ${{ github.event.head_commit.message }}
         with:
           strategy: 'clone'
           path: '_wiki/'
-          # commit-message: ...
+          commit-message: "$COMMIT_MSG"
           # repository: PHPCSStandards/PHP_CodeSniffer
           # token: ${{ secrets.PHPCS_GITHUB_TOKEN }}
-          # dry-run: ${{ github.event_name == 'pull_request' }}
+          dry-run: ${{ github.event_name == 'pull_request' }}
