--- a/.github/workflows/publish-wiki.yml
+++ b/.github/workflows/publish-wiki.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           strategy: 'clone'
           path: '_wiki/'
-          commit-message: "$COMMIT_MSG"
+          commit-message: ${{ env.COMMIT_MSG }}
           # repository: PHPCSStandards/PHP_CodeSniffer
           # token: ${{ secrets.PHPCS_GITHUB_TOKEN }}
           dry-run: ${{ github.event_name == 'pull_request' }}
