--- a/.github/workflows/publish-wiki.yml
+++ b/.github/workflows/publish-wiki.yml
@@ -51,6 +51,11 @@ jobs:
       - name: Re-run tables of contents with different settings for specific file
         run: doctoc ./_wiki/Version-4.0-User-Upgrade-Guide.md --github --maxlevel 3 --update-only
 
+      - name: Check GitHub Git Operations status
+        uses: crazy-max/ghaction-github-status@v4
+        with:
+          git_threshold: partial_outage
+
       - name: Deploy to wiki
         uses: Andrew-Chen-Wang/github-wiki-action@v4
         env:
