--- a/.github/workflows/publish-wiki.yml
+++ b/.github/workflows/publish-wiki.yml
@@ -143,4 +143,4 @@ jobs:
           # token: ${{ secrets.PHPCS_GITHUB_TOKEN }}
           dry-run: ${{ github.event_name == 'pull_request' }}
           disable-empty-commits: true
-          preprocess: false
+          #preprocess: false
